# gbm_fitting_tool

./: .gitignore  CLAUDE.md  PROJECT_STRUCTURE.md  README.md  pyproject.toml
docs/superpowers/plans/: 2026-04-20-gbm-fitting-tool-complete.md  2026-04-20-gbm-fitting-tool.md  2026-04-21-cv-scoring.md
docs/superpowers/specs/: 2026-04-20-gbm-fitting-tool-design-v2.md  2026-04-20-gbm-fitting-tool-design.md  2026-04-21-cv-scoring-design-reviewed.md  2026-04-21-cv-scoring-design.md
examples/: example_usage.ipynb  example_usage.py
src/gbm_fitting/: __init__.py
src/gbm_fitting/data/: loader.py  splitter.py
src/gbm_fitting/preprocessing/: encoder.py
src/ins_gbm/: __init__.py  pipeline.py  progress.py
src/ins_gbm/data/: loader.py  model_data.py  schema.py  splitter.py
src/ins_gbm/ensemble/: _utils.py  blending.py  pipeline.py  (+1 more)
tests/: conftest.py  test_integration.py  test_pipeline.py  test_progress.py
tests/data/: test_loader.py  test_model_data.py  test_new_fields.py  test_schema.py  test_splitter.py
tests/ensemble/: test_blending.py  test_ensemble_pipeline.py  test_stacking.py
tests/evaluation/: test_comparison.py  test_comparison_predictions.py  test_cv_report.py  test_metrics.py  test_plots.py  test_report.py
tests/models/: test_base.py  test_catboost.py  test_fit_transforms.py  test_lightgbm.py  test_lightgbm_offset.py  test_random_forest.py  test_xgboost.py
tests/persistence/: test_persistence.py
tests/preprocessing/: test_encoder.py  test_reducers.py
tests/selection/: test_selection.py
tests/tuning/: test_data_folds.py  test_tuner.py
(+25 files in other folders)
